# opensanctions

./: .gitignore  README.md  data_download.py  data_plot.ipynb  main.py  opensanctions-autocomplete.sh  pyproject.toml
jupyter_nb/: data_plot_h1.ipynb  raw_data_freqs.ipynb
jupyter_nb/copies/h1/: data_plot_h1_csv.ipynb  data_plot_h1_json.ipynb
jupyter_nb/copies/h2/: data_plot_h2_csv.ipynb  data_plot_h2_json.ipynb  data_plot_h2_nested_json.ipynb
jupyter_nb/h1/: data_plot_h1_csv.ipynb  data_plot_h1_json.ipynb
jupyter_nb/h2/: data_plot_h2_csv.ipynb  data_plot_h2_json.ipynb
scripts/: download_data.py
src/opensanctions/: cli.py  config.py  const.py  download.py  filter_gender.py  h1_gender_sources.py  persons.py  persons_extraction.py  raw_data_freqs.py
src/opensanctions/h1/: h1_csv.py  h1_json.py
src/opensanctions/h2/: h2_csv.py  h2_csv_inference.py  h2_json.py
