[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensanctions"
version = "0.1.0"
description = "OpenSanctions data processing and querying"
authors = [{name="Luca"}, {name="Aurora"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv" 
]

[project.scripts]
# Global CLI entry point
opensanctions = "opensanctions.cli:main"
